# syphon

./: .codacy.yaml  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  RELEASING.md  pyproject.toml  settings.json  setup.cfg  setup.py  syphon.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: initialstate-kpis.yml  publish-to-testpypi.yml
LICENSES/: SORTED_CONTAINERS_LICENSE
common/: __init__.py  archivenotfounderror.py  metadata.py  readerror.py  settings.py  sourcefilenotfounderror.py  writeerror.py
main/: __init__.py  getdataextension.py  getdatafiles.py  getparser.py  main.py  promptbuildversion.py  promptdate.py  promptreleaseversion.py  promptswitch.py  purge.py  rebuild.py
management/: __init__.py  archiveengine.py  archivefileexistserror.py  cacheengine.py  columnexistserror.py  copyerror.py  copyvalidationerror.py  purge.py
scripts/: format.py  lint.py
syphon/: __init__.py  __main__.py  __url__.py  __version__.py  _cmdparser.py  _url.py  _version.py  context.py  errors.py  getdataextension.py  getdatafiles.py  getparser.py  hash.py  main.py  promptbuildversion.py  promptdate.py  promptreleaseversion.py  promptswitch.py  purge.py  rebuild.py
syphon/archive/: __init__.py  _lockmanager.py  (+3 more)
tests/: __init__.py  assert_utils.py  conftest.py  test_context.py  test_main.py  types.py
verification/: __init__.py  verify.py  verifyarch.py  verifybuildversion.py  verifydate.py  verifyreleaseversion.py
(+132 files in other folders)
